prusti-tests/tests/parse/fail/ghost-constraints/trait-bounds-invalid-macro-arguments-2.rs
use prusti_contracts::*;

#[ghost_constraint(42, [ //~ ERROR: Could not parse trait bounds
    ensures(result > 0)
])]
fn foo<T>(_x: T) -> i32 {
    42
}

fn main() {
}
